0.8.5
- Dun Scaith
	- DP lowered from 55 to 50
- Hel Scaith
	- DP lowered from 70 to 65
- Hel Centurion
	- System changed to Hel Temporal Shell
- Hel Flash
	- Top speed reduced from 190 to 170
	- HP reduced from 500 to 400
- Nirvana
	- Lowered armor from 1600 to 1400
- Daemon defenses reworked
	- Now use regenerating armor
	- Greatly reduced armor ratings 
- Timeless Prototype
	- Top speed increased from 40 to 55
- Made Hel Scaith less common
- Added new reward for Legio Rising
- Removed Scathach bounty and ship
- Made hard mode even harder
- Code improvements
- Added malware
- Improved Legio Tyranny tooltip
- Made Daemons stronger in autoresolve
- Added toggle for Daemons to config


0.8.4
- Various Daemon tweaks
- Hel Centurion system changed to fortress shield
- Hel Dominator system changed to canister flaks
- Small stat tweaks here and there
- Removed meme features from Daemon Core
- Added a 10% timeflow reduction in player fleet to Daemon Core
- Nelson (XIV) Hammer tubes changed to Sabot tubes
    - This is mainly a lore-based change since built-in hammers don't really make sense on a XIV ship


0.8.3a
- Hotfix


0.8.3
- Added Legio Hard Mode
- Further tweaks to new content
- Fixed some Legio behaviours, I hopefully
- Removed Legio Siege feature 


0.8.2
- Bees
- Bees?
- Yes, Bees


0.8.1
- Fine-tuning


0.8
- Armiger
	- Reduced damage from 300 to 200
	- Reduced flux/s accordingly
	- Reduced time between salvos from 2.8s to 1.8s
	- Reduced recoil per shot
- Efreet
	- Reduced maximum spread
- Aetnos
	- Slightly reduced maximum spread
	- Reduced recoil per shot
- Nelson
	- Reduced armor from 1300 to 1200
- Castigator (all variants)
	- Reduced dissipation from 550 to 500
- Magaera
	- Increased time between shots from 1s to 1.2s
- Gardion
	- Increased chargeup from 0.2s to 0.4s
	- Overall rate of Fire remains the same
- Gardas
	- Increased chargeup from 0.3s to 0.5s
	- Overall rate of fire remains the same
- Timeless Prototype