@@ -101,8 +101,8 @@ Castigator (LI),tahlan_Castigator_P,Assault Cruiser,Legio Infernalis,tahlan_raid
 Dun Scaith,tahlan_DunScaith,Dreadnought,Legio Infernalis,tahlan_infernalcharge,35,22000,1800,20000,,900,370,2,20,10,10,4,4,6000,FRONT,,60,0.4,1,,,900,1800,500,600,20,30,7,800000,3,15,720,0.25,50,50,,"no_bp_drop, tahlan_legio",0.05,0.4,3,5,666
 ,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,
 #Daemons,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,
-Hel Scaith,tahlan_DunScaith_dmn,Daemon,Legio Infernalis,tahlan_stormdrive,40,24000,800,22000,,1200,400,4,30,15,12,6,6,6000,FRONT,,120,0.4,0.9,,,0,0,500,600,20,30,7,1100000,3,15,720,0.25,65,65,"UNBOARDABLE, HIDE_IN_CODEX","tahlan_daemon, auto_rec, no_sell, no_dealer, no_bp_drop",,,,,
-Hel Vanguard,tahlan_vanguard_dmn,Daemon,Legio Infernalis,tahlan_infernalcharge,8,3000,150,2200,,400,65,1,135,120,100,60,90,300,PHASE,damper,,,,,,0,0,50,30,1,30,10,60000,8,10,360,0.25,12,12,"UNBOARDABLE, HIDE_IN_CODEX","tahlan_daemon, auto_rec, no_sell, no_dealer, no_bp_drop",,,,,
+Hel Scaith,tahlan_DunScaith_dmn,Daemon,Legio Infernalis,tahlan_infernalcharge,40,24000,800,22000,,1200,400,4,30,15,12,6,6,6000,FRONT,,120,0.4,0.9,,,0,0,500,600,20,30,7,1100000,3,15,720,0.25,65,65,"UNBOARDABLE, HIDE_IN_CODEX","tahlan_daemon, auto_rec, no_sell, no_dealer, no_bp_drop",,,,,
+Hel Vanguard,tahlan_vanguard_dmn,Daemon,Legio Infernalis,tahlan_stormdrive,8,3000,150,2200,,400,65,1,135,120,100,60,90,300,PHASE,damper,,,,,,0,0,50,30,1,30,10,60000,8,10,360,0.25,12,12,"UNBOARDABLE, HIDE_IN_CODEX","tahlan_daemon, auto_rec, no_sell, no_dealer, no_bp_drop",,,,,
 Hel Centurion,tahlan_centurion_dmn,Daemon,Legio Infernalis,tahlan_heltempshell,8,2250,200,2400,,350,70,1,110,110,90,40,80,300,OMNI,,240,0.4,0.8,,,0,0,50,25,1,25,10,40000,8,10,300,0.25,12,12,"UNBOARDABLE, HIDE_IN_CODEX","tahlan_daemon, auto_rec, no_sell, no_dealer, no_bp_drop",,,,,
 Hel Hammerhead,tahlan_hammerhead_dmn,Daemon,Legio Infernalis,displacer,13,5000,250,5000,,500,130,2,90,60,40,30,60,400,FRONT,,300,0.4,0.8,,,0,0,100,60,2,30,9,80000,5,12,420,0.25,18,18,"UNBOARDABLE, HIDE_IN_CODEX","tahlan_daemon, auto_rec, no_sell, no_dealer, no_bp_drop",,,,,
 Hel Manticore,tahlan_manticore_dmn,Daemon,Legio Infernalis,ammofeed,13,5000,300,6000,,400,120,1,80,70,50,30,50,400,OMNI,,150,0.4,0.9,,,0,0,80,50,2,25,9,90000,5,12,480,0.25,18,18,"UNBOARDABLE, HIDE_IN_CODEX","tahlan_daemon, auto_rec, no_sell, no_dealer, no_bp_drop",,,,,
